# quicknext

./: .gitignore  Cargo.toml  README.md
src/: add_styling.rs  banner.rs  cli.rs  constants.rs  create_project.rs  git.rs  install_packages.rs  logger.rs  main.rs  project_path.rs  scafold_project.rs
src/installers/: app_router.rs  dependency_versions.rs  installer.rs  mod.rs  next_auth.rs  tailwind.rs  trpc.rs
src/utils/: add_package_dependency.rs  copy_file.rs  mod.rs  package_json.rs  packages.rs  project_path.rs  rename_project_package_json.rs  select_boiler_plate.rs
