[package]
name = "quicknext"
version = "0.1.0"
edition = "2021"


[dependencies]
console = "0.15.10"
dialoguer = "0.11.0"
home = "0.5.11"
indexmap = { version = "2.7.0", features = ["serde"] }
owo-colors = "3"
regex = "1.11.1"
semver = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
spinners = "4.1.1"

